--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="input-field">
                     <h3>Контактная информация</h3>
-                    <input type="email" placeholder="Email*" style="width: calc((100% - 5px)/2);">
+                    <input type="email" placeholder="Email*" style="width: calc((100% - 5px)/2);" required>
                     <input type="text" placeholder="Номер телефона (xxxx-xxx-xxxx)" style="width: calc((100% - 5px)/2);" pattern="\d{4}-\d{3}-\d{4}" required>
                 </div>
                 <div class="input-field">
