--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
             <form>
                 <div class="input-field">
                     <h3>Зачётная книжка</h3>
-                    <input type="password" placeholder="Номер" style="width: 100%;" pattern="\d{6}" required>
+                    <input type="password" placeholder="Номер (xxxxxx)" style="width: 100%;" pattern="\d{6}" required>
                 </div>
                 <div class="input-field">
                     <h3>Любимые предметы</h3>
