--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <option>Выборг</option>
                         <option>Екатеринбург</option>
                     </select>
-                    <input type="text" placeholder="Почтовый индекс" style="width: calc((100% - 5px)/2);" pattern="\d{6}" required>
+                    <input type="text" placeholder="Почтовый индекс (xxxxxx)" style="width: calc((100% - 5px)/2);" pattern="\d{6}" required>
                 </div>
                 <div class="input-field">
                     <h3>Контактная информация</h3>
