--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="input-field">
                     <h3>Адрес</h3>
-                    <select style="width: calc((100% - 5px)/2);">
+                    <select style="width: calc((100% - 5px)/2);" required>
                         <option value="" disabled selected>Выберите город</option>
                         <option>Санкт-Петербург</option>
                         <option>Москва</option>
